[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/growbeam_icon2.webp" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/scanner_icon_2.webp" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/seed.png" type="Texture" id=3]
[ext_resource path="res://UI/ToolSelector2DScene.gd" type="Script" id=4]

[node name="ToolSelector2DScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -30.0
margin_bottom = -220.0
script = ExtResource( 4 )

[node name="AnalyzerButton" type="TextureButton" parent="."]
margin_left = 14.0
margin_top = 10.0
margin_right = 364.0
margin_bottom = 492.0
texture_normal = ExtResource( 2 )

[node name="PlantButton" type="TextureButton" parent="."]
margin_left = 448.0
margin_top = 4.0
margin_right = 679.0
margin_bottom = 486.0
action_mode = 0
button_mask = 7
texture_normal = ExtResource( 3 )

[node name="GrowButton" type="TextureButton" parent="."]
margin_left = 806.0
margin_top = -2.0
margin_right = 1105.0
margin_bottom = 297.0
action_mode = 0
button_mask = 7
texture_normal = ExtResource( 1 )

[node name="CoolDownTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[connection signal="pressed" from="AnalyzerButton" to="." method="_on_AnalyzerButton_pressed"]
[connection signal="pressed" from="PlantButton" to="." method="_on_PlantButton_pressed"]
[connection signal="pressed" from="GrowButton" to="." method="_on_GrowButton_pressed"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_CoolDownTimer_timeout"]
